--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "express": "^4.21.1",
     "joi": "^17.13.3",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
     "nestjs-pino": "^4.1.0",
     "passport": "^0.7.0",
@@ -56,6 +58,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/passport-google-oauth2": "^0.1.10",
     "@types/passport-jwt": "^4.0.1",
