--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "pino-pretty": "^11.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "streamifier": "^0.1.1",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
@@ -63,6 +64,7 @@
     "@types/passport-google-oauth2": "^0.1.10",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
+    "@types/streamifier": "^0.1.2",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
