add necessary dependencies

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cookie-parser": "^1.4.7",
     "express": "^4.21.1",
     "joi": "^17.13.3",
+    "magic-bytes.js": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
     "nestjs-pino": "^4.1.0",
@@ -56,9 +57,11 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/bytes": "^3.1.4",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/mime-types": "^2.1.4",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/passport-google-oauth2": "^0.1.10",
