--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "streamifier": "^0.1.1",
+    "stripe": "^17.3.1",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
