--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mysql2": "^3.11.3",
     "nestjs-pino": "^4.1.0",
     "nodemailer": "^6.9.16",
+    "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
@@ -67,6 +68,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.17",
+    "@types/otp-generator": "^4.0.2",
     "@types/passport-google-oauth2": "^0.1.10",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
